fix: reduce GpuInfo .block font-size to avoid breaking lines on smaller screens

--- a/src/styles/widgets/GpuInfo/styles.scss
+++ b/src/styles/widgets/GpuInfo/styles.scss
@@ -9,6 +9,7 @@
   .block {
     border: 0;
     padding: 2px 0;
+    font-size: 0.9rem;
 
     .fas.fa-fire {
       color: #3c457d;
